  13-Jun-2021  - V0.24 Add feature identifiers to the outputs of CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
  14-Jun-2021  - V0.25 Standardized version and timestamp in CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
  19-Jun-2021  - V0.26 Add cofactor and activity provider modules for ChEMBL, DrugBank, and Pharos and associated tests.
  20-Jun-2021  - V0.27 Move ChEMBL API settings into the ChEMBLTargetActivityProvider and ChEMBLTargetMechanismProvider modules
  20-Jun-2021  - V0.28 Add method getTargetIdList() in ChEMBLTargetActivityProvider module and standardize some method prototypes
  20-Jun-2021  - V0.29 Add multiprocessing class to ChEMBLTargetActivityProvider and standardize cofactor attribute names
  21-Jun-2021  - V0.30 Make ChEMBL activity query more selective and focus error handling more specifically on return issues.
  22-Jun-2021  - V0.31 Add name and mechanism queries in the ChEMBLTargetActivityProvider workflow. Use DrugBankProvider is a
                       data source in DrugBankTargetProvider() rather than FASTA downloads.
  23-Jun-2021  - V0.32 Add preprocessing filter to Pharos SQL dump input and handle missing ChEMBL API results more gracefully
  24-Jun-2021  - V0.33 Get release versions from data source for ChEMBL, DrugBank and Pharos and propagate these in all resource files
  24-Jun-2021  - V0.34 Add getVersion() method in PharosTargetProvider() module
  25-Jun-2021  - V0.35 Add a target_name attributed to Pharos, DrugBank and ChEMBL cofactor data.
  25-Jun-2021  - V0.36 Update method prototype skipExisting -> skip in ChEMBLTargetActivityProvider().
  26-Jun-2021  - V0.37 Serialize DrugBank cofactors in pickle - resolve missing target names -
  26-Jun-2021  - V0.38 Make chemical component and BIRD definitions singular.
  27-Jun-2021  - V0.39 Add diagnostics to capture statistics for ChEMBL and Pharos mapped an unmapped cofactors